Лабораторні 2–4: класи, методи, обʼєкти

--- a/4_laba/classes.ipynb
+++ b/4_laba/classes.ipynb
@@ -1,240 +1,504 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b5c53924",
+   "metadata": {},
+   "source": [
+    "**Висновок****\n",
+    "\n",
+    "У цій лабораторній роботі було розглянуто:\n",
+    "\n",
+    "створення класів та обʼєктів\n",
+    "\n",
+    "атрибути та методи\n",
+    "\n",
+    "змінні класу\n",
+    "\n",
+    "staticmethod, classmethod\n",
+    "\n",
+    "properties\n",
+    "\n",
+    "приватні атрибути\n",
+    "\n",
+    "магічні методи"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "d01b6099",
+   "execution_count": 1,
+   "id": "fcee90bb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Це клас Example\n",
-      "Hello from static method!\n"
+      "Собака Рекс (2)\n",
+      "Кошка Мурка (3)\n"
      ]
     }
    ],
    "source": [
-    "class Example:\n",
+    "class MyAnimals:\n",
+    "    def __init__(self, animals, name, age):\n",
+    "        self.animals = animals\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"{self.animals} {self.name} ({self.age})\"\n",
+    "\n",
+    "\n",
+    "a = MyAnimals(\"Собака\", \"Рекс\", 2)\n",
+    "print(a)\n",
+    "b = MyAnimals(\"Кошка\", \"Мурка\", 3)\n",
+    "print(b)\n",
+    "c = MyAnimals(\"Попугай\", \"Кеша\", 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5396a69a",
+   "metadata": {},
+   "source": [
+    "10. **Магічні методи****"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3f1b3034",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Собака Рекс (2)\n",
+      "MyAnimals(\"Собака\", \"Рекс\", 2)\n",
+      "4\n",
+      "Кошка Мурка (3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyAnimals:\n",
+    "    def __init__(self, animals, name, age):\n",
+    "        self.animals = animals\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"{self.animals} {self.name} ({self.age})\"\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f'MyAnimals(\"{self.animals}\", \"{self.name}\", {self.age})'\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.name)\n",
+    "\n",
+    "\n",
+    "a = MyAnimals(\"Собака\", \"Рекс\", 2)\n",
+    "print(a)\n",
+    "print(repr(a))\n",
+    "print(len(a))\n",
+    "b = MyAnimals(\"Кошка\", \"Мурка\", 3)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ac14f90",
+   "metadata": {},
+   "source": [
+    "9. **Приватні атрибути****"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "202c5d85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Приватний\n",
+      "Дуже приватний\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyAnimals:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        self._secret = \"Приватний\"\n",
+    "        self.__very_secret = \"Дуже приватний\"\n",
+    "\n",
+    "    @property\n",
+    "    def secret(self):\n",
+    "        return self._secret\n",
+    "\n",
+    "    @property\n",
+    "    def very_secret(self):\n",
+    "        return self.__very_secret\n",
+    "\n",
+    "\n",
+    "a = MyAnimals(\"Рекс\")\n",
+    "print(a.secret)\n",
+    "print(a.very_secret)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58f57894",
+   "metadata": {},
+   "source": [
+    "8. **Методи класу**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c1e23668",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "Всього: 2\n",
+      "CSV: 1\n",
+      "Росомаха.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyAnimals:\n",
+    "    total_objects = 0\n",
+    "    total_csv = 0\n",
+    "\n",
+    "    def __init__(self, animals, name, age):\n",
+    "        self.animals = animals\n",
+    "        self.name = name\n",
+    "        self.age = int(age)\n",
+    "        MyAnimals.total_objects += 1\n",
     "\n",
     "    @classmethod\n",
-    "    def class_info(cls):\n",
-    "        return f\"Це клас {cls.__name__}\"\n",
+    "    def from_csv(cls, data: str):\n",
+    "        cls.total_csv += 1\n",
+    "        animals, name, age = data.split(\",\")\n",
+    "        return cls(animals, name, age)\n",
     "\n",
-    "    @staticmethod\n",
-    "    def say_hello():\n",
-    "        return \"Hello from static method!\"\n",
+    "    @classmethod\n",
+    "    def check_if_capital(cls, name):\n",
+    "        return name[0].isupper()\n",
     "\n",
     "\n",
-    "print(Example.class_info())\n",
-    "print(Example.say_hello())"
+    "a1 = MyAnimals.from_csv(\"Кіт,Мурка,5\")\n",
+    "a2 = MyAnimals(\"Собака\", \"Рекс\", 2)\n",
+    "\n",
+    "print(MyAnimals.check_if_capital(a1.name))\n",
+    "print(\"Всього:\", MyAnimals.total_objects)\n",
+    "print(\"CSV:\", MyAnimals.total_csv)\n",
+    "print(\"Росомаха.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "32268fb3",
+   "id": "1efe3173",
    "metadata": {},
    "source": [
-    "## 4. Classmethod та Staticmethod"
+    "7. **Properties****"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "abc34de2",
+   "execution_count": 5,
+   "id": "9b0db069",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bohdan\n",
-      "Довжина імені: 6\n"
+      "2040\n",
+      "Моїй тваринці 5 років\n",
+      "Росомаха.\n"
      ]
     }
    ],
    "source": [
-    "class User:\n",
-    "    def __init__(self, username):\n",
-    "        self._username = username\n",
+    "from datetime import datetime\n",
+    "\n",
+    "class MyAnimals:\n",
+    "    max_age = 20\n",
+    "\n",
+    "    def __init__(self, animals, name, age):\n",
+    "        self.animals = animals\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
     "\n",
     "    @property\n",
-    "    def username(self):\n",
-    "        return self._username.capitalize()\n",
+    "    def live_until(self):\n",
+    "        return datetime.today().year - self.age + self.max_age\n",
     "\n",
     "    @property\n",
-    "    def name_length(self):\n",
-    "        return len(self._username)\n",
+    "    def see_age(self):\n",
+    "        return f\"Моїй тваринці {self.age} років\"\n",
     "\n",
     "\n",
-    "u = User(\"bohdan\")\n",
-    "print(u.username)\n",
-    "print(\"Довжина імені:\", u.name_length)"
+    "a1 = MyAnimals(\"Кіт\", \"Мурка\", 5)\n",
+    "print(a1.live_until)\n",
+    "print(a1.see_age)\n",
+    "print(\"Росомаха.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "52447f1d",
+   "id": "9ce3dce1",
    "metadata": {},
    "source": [
-    "### ✅ Завдання 3  \n",
-    "Додайте властивість, яка повертає довжину імені користувача.\n"
+    "6. **Статичні методи**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "4c85e6f5",
+   "execution_count": 6,
+   "id": "2b51111a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bohdan\n"
+      "3\n",
+      "{'Кролик', 'Кіт', 'Пес'}\n",
+      "Росомаха.\n"
      ]
     }
    ],
    "source": [
-    "class User:\n",
-    "    def __init__(self, username):\n",
-    "        self._username = username\n",
+    "class MyAnimals:\n",
+    "    total_animals = 0\n",
+    "    types = set()\n",
     "\n",
-    "    @property\n",
-    "    def username(self):\n",
-    "        return self._username.capitalize()\n",
+    "    def __init__(self, animals, name, age):\n",
+    "        self.animals = animals\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "        MyAnimals.total_animals += 1\n",
+    "        MyAnimals.types.add(animals)\n",
     "\n",
     "\n",
-    "u = User(\"bohdan\")\n",
-    "print(u.username)"
+    "MyAnimals(\"Кіт\", \"Мурка\", 5)\n",
+    "MyAnimals(\"Пес\", \"Рекс\", 3)\n",
+    "MyAnimals(\"Кролик\", \"Банні\", 2)\n",
+    "\n",
+    "print(MyAnimals.total_animals)\n",
+    "print(MyAnimals.types)\n",
+    "print(\"Росомаха.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "051ab891",
+   "id": "6bf7d9db",
    "metadata": {},
    "source": [
-    "## 3. Властивості (property)"
+    "5. **Змінні класу****"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "2136c841",
+   "execution_count": 7,
+   "id": "ac6d8c5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Типи: {'Кролик', 'Кіт', 'Пес'}\n",
+      "Кількість: 3\n",
+      "Росомаха.\n",
+      "Помилка: введено не число\n",
+      "Росомаха.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyAnimals:\n",
+    "    total_animals = 0\n",
+    "    total_types = set()\n",
+    "\n",
+    "    def __init__(self, animals, name, age):\n",
+    "        self.animals = animals\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "        MyAnimals.total_animals += 1\n",
+    "        MyAnimals.total_types.add(animals)\n",
+    "\n",
+    "\n",
+    "animals = [\"Кіт\", \"Пес\", \"Кролик\"]\n",
+    "names = [\"Bobby\", \"Perry\", \"Rex\"]\n",
+    "\n",
+    "for i in range(3):\n",
+    "    MyAnimals(animals[i], names[i], i)\n",
+    "\n",
+    "print(\"Типи:\", MyAnimals.total_types)\n",
+    "print(\"Кількість:\", MyAnimals.total_animals)\n",
+    "\n",
+    "print(\"Росомаха.\")\n",
+    "\n",
+    "try:\n",
+    "    user_input = int(input(\"Enter a number: \"))\n",
+    "    print(f\"You entered: {user_input}\")\n",
+    "except ValueError:\n",
+    "    print(\"Помилка: введено не число\")\n",
+    "finally:\n",
+    "    print(\"Росомаха.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1c6ff1f",
+   "metadata": {},
+   "source": [
+    "4. **Методи класу**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9d5e3772",
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'Student' is not defined",
+     "evalue": "name 'a3' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[24]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mStudent\u001b[49m.university = \u001b[33m\"\u001b[39m\u001b[33mLviv Polytechnic\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(s1.info())\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(s2.info())\n",
-      "\u001b[31mNameError\u001b[39m: name 'Student' is not defined"
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m a1.name = \u001b[33m\"\u001b[39m\u001b[33mStepan\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      2\u001b[39m a2.name = \u001b[33m\"\u001b[39m\u001b[33mJackips\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43ma3\u001b[49m.name = \u001b[33m\"\u001b[39m\u001b[33mRosomaha\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mName1:\u001b[39m\u001b[33m\"\u001b[39m, a1.name)\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mName2:\u001b[39m\u001b[33m\"\u001b[39m, a2.name)\n",
+      "\u001b[31mNameError\u001b[39m: name 'a3' is not defined"
      ]
     }
    ],
    "source": [
-    "Student.university = \"Lviv Polytechnic\"\n",
+    "a1.name = \"Stepan\"\n",
+    "a2.name = \"Jackips\"\n",
+    "a3.name = \"Rosomaha\"\n",
     "\n",
-    "print(s1.info())\n",
-    "print(s2.info())\n",
-    "print(\"Університет студента:\", s1.university)"
+    "\n",
+    "print(\"Name1:\", a1.name)\n",
+    "print(\"Name2:\", a2.name)\n",
+    "print(\"Name3:\", a3.name)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0f49945c",
+   "id": "45d00732",
    "metadata": {},
    "source": [
-    "### ✅ Завдання 2  \n",
-    "Змініть назву університету для всіх студентів."
+    "3. **Зміна атрибутів обʼєкта**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42191cd7",
+   "id": "c23c8632",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Student:\n",
-    "    university = \"IT College Lviv\"  # змінна класу\n",
-    "\n",
-    "    def __init__(self, name):\n",
-    "        self.name = name  # змінна об'єкта\n",
-    "\n",
-    "    def info(self):\n",
-    "        return f\"Студент {self.name} навчається в {Student.university}\"\n",
-    "\n",
-    "\n",
-    "s1 = Student(\"Андрій\")\n",
-    "s2 = Student(\"Олена\")\n",
-    "\n",
-    "print(s1.info())\n",
-    "print(s2.info())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e69df9c2",
-   "metadata": {},
-   "source": [
-    "## 2. Змінні класу та змінні об'єкта"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f8c26de",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p2 = Person(\"Марта\", 19)\n",
-    "print(p2.say_hello())\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e05d1f84",
-   "metadata": {},
-   "source": [
-    "### ✅ Завдання 1  \n",
-    "Створіть ще один об'єкт класу `Person` з іншим ім'ям та віком."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39f55bd8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Person:\n",
-    "    \"\"\"Клас для опису людини\"\"\"\n",
-    "\n",
-    "    def __init__(self, name, age):\n",
+    "class MyAnimals:\n",
+    "    def __init__(self, animals, name, age, mass=None):\n",
+    "        print(f\"В мене є тваринка {animals}, яку звати {name}, якій {age} років\")\n",
+    "        self.animals = animals\n",
     "        self.name = name\n",
     "        self.age = age\n",
-    "\n",
-    "    def say_hello(self):\n",
-    "        return f\"Привіт, мене звати {self.name}, мені {self.age} років\"\n",
+    "        self.mass = 0 if mass is None else mass\n",
     "\n",
     "\n",
-    "# створення об'єкта\n",
-    "p1 = Person(\"Богдан\", 20)\n",
+    "a1 = MyAnimals(\"Рибки\", \"Неони\", 1)\n",
+    "a2 = MyAnimals(\"Кіт\", \"Мурка\", 5, 10)\n",
+    "a3 = MyAnimals(\"Собака\", \"Рекс\", 2)\n",
     "\n",
-    "print(p1.say_hello())"
+    "print(a2.name)\n",
+    "\n",
+    "a2.name = \"Машка\"\n",
+    "print(f\"Я перейменував тваринку на {a2.name}, вага {a2.mass} кг\")\n",
+    "\n",
+    "try:\n",
+    "    print(\"Росомаха...\")\n",
+    "except ValueError:\n",
+    "    print(\"Помилка!\")\n",
+    "finally:\n",
+    "    print(\"Росомаха.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fdd077c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animals = [\"Рибки\", \"Кіт\", \"Собака\"]\n",
+    "names = [\"Неони\", \"Мурка\", \"Рекс\"]\n",
+    "ages = [1, 5, 2]\n",
+    "\n",
+    "print(f\"В мене є тваринка {animals[1]} яку звати {names[1]} які {ages[1]} років\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "221228df",
+   "id": "5ef63c5a",
    "metadata": {},
    "source": [
-    "## 1. Створення простого класу\n"
+    "2. **Порівняння простих даних з обʼєктами**\n",
+    "\n",
+    "\n",
+    "Спочатку використовуємо списки, а потім замінюємо їх на клас."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb538b1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyAnimals:\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "a = MyAnimals()\n",
+    "print(type(a))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c4e070d",
+   "metadata": {},
+   "source": [
+    "1.**Створення базового класу**\n",
+    "\n",
+    "\n",
+    "Створюємо простий клас та перевіряємо тип створеного обʼєкта"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96282ad8",
+   "metadata": {},
+   "source": [
+    "**Класи, обʼєкти та методи в Python**"
    ]
   }
  ],
