--- a/2_laba/code_ai.ipynb
+++ b/2_laba/code_ai.ipynb
@@ -1,166 +1,203 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e1906388",
+   "metadata": {},
+   "source": [
+    "**Висновок****\n",
+    "\n",
+    "\n",
+    "\n",
+    "У цьому notebook-у було розглянуто основні концепції Python:\n",
+    "\n",
+    "змінні та типи даних\n",
+    "\n",
+    "операції\n",
+    "\n",
+    "рядки\n",
+    "\n",
+    "списки\n",
+    "\n",
+    "умови\n",
+    "\n",
+    "цикли\n",
+    "\n",
+    "функції\n",
+    "\n",
+    "Отримані знання є базою для подальшого вивчення мови Python."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "b1efe1eb",
+   "execution_count": 3,
+   "id": "5db5e2b7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ціле число: 42, тип: <class 'int'>\n",
-      "Число з комою: 3.14, тип: <class 'float'>\n",
-      "Комплексне число: (2+3j), тип: <class 'complex'>\n",
-      "Текст: Привіт, Python!, тип: <class 'str'>\n",
-      "Логічне значення: True, тип: <class 'bool'>\n",
-      "\n",
-      "========================================\n",
-      "Додавання: 13\n",
-      "Віднімання: 7\n",
-      "Множення: 30\n",
-      "Ділення: 3.3333333333333335\n",
-      "Цілочисельне ділення: 3\n",
-      "Залишок від ділення: 1\n",
-      "Степінь: 1000\n",
-      "10 > 3: True\n",
-      "10 == 3: False\n",
-      "\n",
-      "========================================\n",
-      "Python - чудова мова програмування!\n",
-      "35\n",
-      "PYTHON - ЧУДОВА МОВА ПРОГРАМУВАННЯ!\n",
-      "python - чудова мова програмування!\n",
-      "['Python', '-', 'чудова', 'мова', 'програмування!']\n",
-      "Python---чудова-мова-програмування!\n",
-      "16\n",
-      "Python 3 - чудова мова програмування!\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "\n",
-      "========================================\n",
-      "[1, 2, 3, 4, 5]\n",
-      "['яблуко', 'банан', 'апельсин']\n",
-      "[1, 2, 3, 4, 5, 6]\n",
-      "['яблуко', 'банан', 'апельсин', 'груша', 'слива']\n",
-      "[6, 5, 4, 2, 1]\n",
-      "['апельсин', 'груша', 'слива', 'яблуко']\n",
-      "[6, 5]\n",
-      "[2, 1]\n",
-      "[6, 4, 1]\n",
-      "\n",
-      "========================================\n",
-      "Ви можете голосувати\n",
-      "дорослий\n",
-      "добре\n",
-      "\n",
-      "========================================\n",
-      "for: 0\n",
-      "for: 1\n",
-      "for: 2\n",
-      "for: 3\n",
-      "for: 4\n",
-      "while: 0\n",
-      "while: 1\n",
-      "while: 2\n",
-      "i = 0\n",
-      "i = 2\n",
-      "i = 3\n",
-      "[0, 1, 4, 9, 16]\n",
-      "\n",
-      "========================================\n",
       "Привіт, світ!\n",
       "8\n",
       "4\n",
       "8\n",
-      "10\n",
-      "120\n",
-      "\n",
-      "========================================\n",
-      "36\n",
-      "\n",
-      "========================================\n",
-      "Помилка: division by zero\n",
-      "Кінець блоку try\n",
-      "\n",
-      "========================================\n",
-      "Python is awesome\n"
+      "10\n"
      ]
     }
    ],
    "source": [
-    "# =========================\n",
-    "# Основи Python\n",
-    "# =========================\n",
+    "def привітання():\n",
+    "    return \"Привіт, світ!\"\n",
     "\n",
-    "# 1. Змінні та типи даних\n",
-    "ціле_число = 42\n",
-    "число_з_комою = 3.14\n",
-    "комплексне_число = 2 + 3j\n",
-    "текст = \"Привіт, Python!\"\n",
-    "істина = True\n",
-    "хибність = False\n",
+    "def додати(a, b):\n",
+    "    return a + b\n",
     "\n",
-    "print(f\"Ціле число: {ціле_число}, тип: {type(ціле_число)}\")\n",
-    "print(f\"Число з комою: {число_з_комою}, тип: {type(число_з_комою)}\")\n",
-    "print(f\"Комплексне число: {комплексне_число}, тип: {type(комплексне_число)}\")\n",
-    "print(f\"Текст: {текст}, тип: {type(текст)}\")\n",
-    "print(f\"Логічне значення: {істина}, тип: {type(істина)}\")\n",
+    "def степінь(x, n=2):\n",
+    "    return x ** n\n",
     "\n",
-    "print(\"\\n\" + \"=\"*40)\n",
+    "def сума(*числа):\n",
+    "    return sum(числа)\n",
     "\n",
-    "# 2. Основні операції\n",
-    "a = 10\n",
-    "b = 3\n",
+    "print(привітання())\n",
+    "print(додати(5, 3))\n",
+    "print(степінь(2))\n",
+    "print(степінь(2, 3))\n",
+    "print(сума(1, 2, 3, 4))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2b0eb63",
+   "metadata": {},
+   "source": [
+    "7. **Функції****\n",
     "\n",
-    "print(f\"Додавання: {a + b}\")\n",
-    "print(f\"Віднімання: {a - b}\")\n",
-    "print(f\"Множення: {a * b}\")\n",
-    "print(f\"Ділення: {a / b}\")\n",
-    "print(f\"Цілочисельне ділення: {a // b}\")\n",
-    "print(f\"Залишок від ділення: {a % b}\")\n",
-    "print(f\"Степінь: {a ** b}\")\n",
     "\n",
-    "print(f\"{a} > {b}: {a > b}\")\n",
-    "print(f\"{a} == {b}: {a == b}\")\n",
     "\n",
-    "print(\"\\n\" + \"=\"*40)\n",
+    "Функції дозволяють перевикористовувати код."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "74d538d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "яблуко\n",
+      "банан\n",
+      "апельсин\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "[0, 1, 4, 9, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print(i)\n",
     "\n",
-    "# 3. Рядки та їх методи\n",
-    "text = \"Python - чудова мова програмування!\"\n",
+    "фрукти = [\"яблуко\", \"банан\", \"апельсин\"]\n",
+    "for фрукт in фрукти:\n",
+    "    print(фрукт)\n",
     "\n",
-    "print(text)\n",
-    "print(len(text))\n",
-    "print(text.upper())\n",
-    "print(text.lower())\n",
+    "лічильник = 0\n",
+    "while лічильник < 3:\n",
+    "    print(лічильник)\n",
+    "    лічильник += 1\n",
     "\n",
-    "words = text.split()\n",
-    "print(words)\n",
-    "print(\"-\".join(words))\n",
+    "квадрати = [x**2 for x in range(5)]\n",
+    "print(квадрати)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6edcacb",
+   "metadata": {},
+   "source": [
+    "6. **Цикли**\n",
     "\n",
-    "print(text.find(\"мова\"))\n",
-    "print(text.replace(\"Python\", \"Python 3\"))\n",
     "\n",
-    "print(text.startswith(\"Python\"))\n",
-    "print(text.endswith(\"!\"))\n",
-    "print(\"мова\" in text)\n",
     "\n",
-    "print(\"\\n\" + \"=\"*40)\n",
+    "Цикли дозволяють багаторазово виконувати один і той самий код."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5ab8d404",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ви можете голосувати\n",
+      "дорослий\n"
+     ]
+    }
+   ],
+   "source": [
+    "вік = 18\n",
+    "має_паспорт = True\n",
     "\n",
-    "# 4. Списки та колекції\n",
+    "if вік >= 18 and має_паспорт:\n",
+    "    print(\"Ви можете голосувати\")\n",
+    "elif вік >= 18:\n",
+    "    print(\"Потрібен паспорт\")\n",
+    "else:\n",
+    "    print(\"Ви ще замалі\")\n",
+    "\n",
+    "статус = \"дорослий\" if вік >= 18 else \"неповнолітній\"\n",
+    "print(статус)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4e2fa7f",
+   "metadata": {},
+   "source": [
+    "5. **Умовні конструкції**\n",
+    "\n",
+    "\n",
+    "\n",
+    "Умовні оператори дозволяють виконувати код залежно від умови."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "02376fc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 5, 4, 2, 1]\n",
+      "['апельсин', 'груша', 'слива', 'яблуко']\n",
+      "[6, 5]\n",
+      "[2, 1]\n",
+      "[6, 4, 1]\n"
+     ]
+    }
+   ],
+   "source": [
     "числа = [1, 2, 3, 4, 5]\n",
     "фрукти = [\"яблуко\", \"банан\", \"апельсин\"]\n",
     "\n",
-    "print(числа)\n",
-    "print(фрукти)\n",
-    "\n",
     "числа.append(6)\n",
     "фрукти.extend([\"груша\", \"слива\"])\n",
-    "\n",
-    "print(числа)\n",
-    "print(фрукти)\n",
     "\n",
     "числа.remove(3)\n",
     "фрукти.pop(1)\n",
@@ -173,109 +210,212 @@
     "\n",
     "print(числа[:2])\n",
     "print(числа[-2:])\n",
-    "print(числа[::2])\n",
+    "print(числа[::2])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13d6c035",
+   "metadata": {},
+   "source": [
+    "4. **Списки та колекції**\n",
     "\n",
-    "print(\"\\n\" + \"=\"*40)\n",
     "\n",
-    "# 5. Умовні конструкції\n",
-    "вік = 18\n",
-    "має_паспорт = True\n",
     "\n",
-    "if вік >= 18 and має_паспорт:\n",
-    "    print(\"Ви можете голосувати\")\n",
-    "elif вік >= 18:\n",
-    "    print(\"Потрібен паспорт\")\n",
-    "else:\n",
-    "    print(\"Замало років\")\n",
+    "Списки дозволяють зберігати набір елементів одного або різних типів."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e4b2a49b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python - чудова мова програмування!\n",
+      "35\n",
+      "PYTHON - ЧУДОВА МОВА ПРОГРАМУВАННЯ!\n",
+      "python - чудова мова програмування!\n",
+      "['Python', '-', 'чудова', 'мова', 'програмування!']\n",
+      "Python---чудова-мова-програмування!\n",
+      "16\n",
+      "Python 3 - чудова мова програмування!\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "текст = \"Python - чудова мова програмування!\"\n",
     "\n",
-    "статус = \"дорослий\" if вік >= 18 else \"неповнолітній\"\n",
-    "print(статус)\n",
+    "print(текст)\n",
+    "print(len(текст))\n",
+    "print(текст.upper())\n",
+    "print(текст.lower())\n",
     "\n",
-    "оцінка = 85\n",
-    "if 90 <= оцінка <= 100:\n",
-    "    рівень = \"відмінно\"\n",
-    "elif 75 <= оцінка < 90:\n",
-    "    рівень = \"добре\"\n",
-    "elif 60 <= оцінка < 75:\n",
-    "    рівень = \"задовільно\"\n",
-    "else:\n",
-    "    рівень = \"незадовільно\"\n",
+    "слова = текст.split()\n",
+    "print(слова)\n",
+    "print(\"-\".join(слова))\n",
     "\n",
-    "print(рівень)\n",
+    "print(текст.find(\"мова\"))\n",
+    "print(текст.replace(\"Python\", \"Python 3\"))\n",
     "\n",
-    "print(\"\\n\" + \"=\"*40)\n",
+    "print(текст.startswith(\"Python\"))\n",
+    "print(текст.endswith(\"!\"))\n",
+    "print(\"мова\" in текст)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06aea92e",
+   "metadata": {},
+   "source": [
+    "3. **Рядки та їх методи****\n",
     "\n",
-    "# 6. Цикли\n",
-    "for i in range(5):\n",
-    "    print(f\"for: {i}\")\n",
     "\n",
-    "лічильник = 0\n",
-    "while лічильник < 3:\n",
-    "    print(f\"while: {лічильник}\")\n",
-    "    лічильник += 1\n",
     "\n",
-    "for i in range(5):\n",
-    "    if i == 1:\n",
-    "        continue\n",
-    "    if i == 4:\n",
-    "        break\n",
-    "    print(f\"i = {i}\")\n",
+    "Рядки — це послідовності символів з багатьма вбудованими методами."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7b90506b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Додавання: 13\n",
+      "Віднімання: 7\n",
+      "Множення: 30\n",
+      "Ділення: 3.3333333333333335\n",
+      "Цілочисельне ділення: 3\n",
+      "Залишок від ділення: 1\n",
+      "Степінь: 1000\n",
+      "\n",
+      "Порівняння:\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 3\n",
     "\n",
-    "квадрати = [x**2 for x in range(5)]\n",
-    "print(квадрати)\n",
+    "print(f\"Додавання: {a + b}\")\n",
+    "print(f\"Віднімання: {a - b}\")\n",
+    "print(f\"Множення: {a * b}\")\n",
+    "print(f\"Ділення: {a / b}\")\n",
+    "print(f\"Цілочисельне ділення: {a // b}\")\n",
+    "print(f\"Залишок від ділення: {a % b}\")\n",
+    "print(f\"Степінь: {a ** b}\")\n",
     "\n",
-    "print(\"\\n\" + \"=\"*40)\n",
+    "print(\"\\nПорівняння:\")\n",
+    "print(a > b)\n",
+    "print(a < b)\n",
+    "print(a == b)\n",
+    "print(a != b)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56d7e0e0",
+   "metadata": {},
+   "source": [
+    "2. **Основні операції**\n",
     "\n",
-    "# 7. Функції\n",
-    "def привітання():\n",
-    "    return \"Привіт, світ!\"\n",
     "\n",
-    "def додати(a, b):\n",
-    "    return a + b\n",
     "\n",
-    "def степінь(x, p=2):\n",
-    "    return x ** p\n",
+    "Python підтримує всі стандартні математичні та логічні операції"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "044166b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ціле число: 42, тип: <class 'int'>\n",
+      "Число з комою: 3.14, тип: <class 'float'>\n",
+      "Комплексне число: (2+3j), тип: <class 'complex'>\n",
+      "Текст: Привіт, Python!, тип: <class 'str'>\n",
+      "Логічне значення: True, тип: <class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Числові типи\n",
+    "ціле_число = 42\n",
+    "число_з_комою = 3.14\n",
+    "комплексне_число = 2 + 3j\n",
     "\n",
-    "def сума(*args):\n",
-    "    return sum(args)\n",
+    "# Рядковий тип\n",
+    "текст = \"Привіт, Python!\"\n",
     "\n",
-    "print(привітання())\n",
-    "print(додати(5, 3))\n",
-    "print(степінь(2))\n",
-    "print(степінь(2, 3))\n",
-    "print(сума(1, 2, 3, 4))\n",
+    "# Логічний тип\n",
+    "істина = True\n",
+    "хибність = False\n",
     "\n",
-    "def факторіал(n):\n",
-    "    if n <= 1:\n",
-    "        return 1\n",
-    "    return n * факторіал(n - 1)\n",
+    "# Виведемо типи та значення\n",
+    "print(f\"Ціле число: {ціле_число}, тип: {type(ціле_число)}\")\n",
+    "print(f\"Число з комою: {число_з_комою}, тип: {type(число_з_комою)}\")\n",
+    "print(f\"Комплексне число: {комплексне_число}, тип: {type(комплексне_число)}\")\n",
+    "print(f\"Текст: {текст}, тип: {type(текст)}\")\n",
+    "print(f\"Логічне значення: {істина}, тип: {type(істина)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1be1c24a",
+   "metadata": {},
+   "source": [
+    "1. **Змінні та типи даних**\n",
     "\n",
-    "print(факторіал(5))\n",
     "\n",
-    "print(\"\\n\" + \"=\"*40)\n",
     "\n",
-    "# 8. Lambda\n",
-    "square = lambda x: x * x\n",
-    "print(square(6))\n",
+    "Python — це мова з динамічною типізацією. Це означає, що тип змінної визначається автоматично."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ec48bfd",
+   "metadata": {},
+   "source": [
+    "**Основи Python: Вступ до програмування**\n",
     "\n",
-    "print(\"\\n\" + \"=\"*40)\n",
     "\n",
-    "# 9. try / except / finally\n",
-    "try:\n",
-    "    print(10 / 0)\n",
-    "except Exception as e:\n",
-    "    print(\"Помилка:\", e)\n",
-    "finally:\n",
-    "    print(\"Кінець блоку try\")\n",
     "\n",
-    "print(\"\\n\" + \"=\"*40)\n",
+    "Ласкаво просимо до вступного курсу з Python!\n",
+    "У цьому notebook-у ми розглянемо основні концепції мови програмування Python, включаючи:\n",
     "\n",
-    "# 10. Робота з файлом\n",
-    "with open(\"test.txt\", \"w\") as f:\n",
-    "    f.write(\"Python is awesome\")\n",
+    "Змінні та типи даних\n",
     "\n",
-    "with open(\"test.txt\", \"r\") as f:\n",
-    "    print(f.read())"
+    "Основні операції\n",
+    "\n",
+    "Рядки та їх методи\n",
+    "\n",
+    "Списки та колекції\n",
+    "\n",
+    "Умовні конструкції\n",
+    "\n",
+    "Цикли\n",
+    "\n",
+    "Функції\n",
+    "\n",
+    "Давайте почнемо з практичних прикладів!"
    ]
   }
  ],
